--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	
+	<link rel = "stylesheet" href = "styles.css" />
 	<title>Treefort Creators</title>
 </head>
 
@@ -10,8 +10,12 @@
 <nav></nav>
 
 <main>
-  <p>Why is this not doing anything?</p>
-
+	
+	<section>
+		<form>
+		  <p>Will have checkboxes</p>
+		</form>
+	</section>
 </main>
 
 
