--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
 <head>
 	<link rel = "stylesheet" href = "./styles.css" />
+
+	<!-- CSS only -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+<!-- JS, Popper.js, and jQuery -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
 	<title>Treefort Creators</title>
 </head>
 
@@ -13,7 +22,17 @@
 	
 	<section>
 		<form>
-		  <p>Will have checkboxes</p>
+		<div class = "dropdown">
+		  <button class = "btn btn-success dropdown-toggle" type = "button" data-toggle="drowpdown" aria-haspopup="true" aria-expanded = "false">Creators
+		  </button>
+		  <button class= "dropdown-item" type = "button">Youfreeme</button>
+		  <button class = "dropdown-item" type = "button">Meliai</button>
+		  <button class = "dropdown-item" type = "button">Tumbling Dice</button>
+		  <button class = "drowpdown-item" type = "button">Everything Bagel</button>
+		  <button class = "dropwdown-item" type = "button">Audiogen</button>
+
+		 </div>
+		  <button class="btn btn-primary">Submit</button>
 		</form>
 	</section>
 </main>
