--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
 	<section>
 		<form>
 		<div class = "dropdown">
-		  <button class = "btn btn-success dropdown-toggle" type = "button" data-toggle="drowpdown" aria-haspopup="true" aria-expanded = "false">Creators
+		  <button class = "btn btn-success dropdown-toggle" type = "button" id = "name-dropdown" data-toggle="drowpdown" aria-haspopup="true" aria-expanded = "false">Creators
 		  </button>
-		  <button class= "dropdown-item" type = "button">Youfreeme</button>
-		  <button class = "dropdown-item" type = "button">Meliai</button>
-		  <button class = "dropdown-item" type = "button">Tumbling Dice</button>
-		  <button class = "drowpdown-item" type = "button">Everything Bagel</button>
-		  <button class = "dropwdown-item" type = "button">Audiogen</button>
-
+		  <div class = "dropdown-menu" aria-labelledby="name-dropdown">
+		  	<button class= "dropdown-item" type = "button">Youfreeme</button>
+		  	<button class = "dropdown-item" type = "button">Meliai</button>
+		  	<button class = "dropdown-item" type = "button">Tumbling Dice</button>
+		  	<button class = "drowpdown-item" type = "button">Everything Bagel</button>
+		  	<button class = "dropwdown-item" type = "button">Audiogen</button>
+		  </div>
 		 </div>
 		  <button class="btn btn-primary">Submit</button>
 		</form>
