--- a/index.html
+++ b/index.html
@@ -2,22 +2,30 @@
 <html>
 <head>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-	<link rel = "stylesheet" href = "./styles.css" />
 
 	<!-- CSS only -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="styles.css" />
 
 <!-- JS, Popper.js, and jQuery -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-
+	
 	<title>Treefort Creators</title>
 </head>
 <body>
 <div class="container">
-	<header>
-		<h1>Treefort Creators</h1>
+	<header class="jumbotron">
+		<a href="https://www.treefortforums.net/" id="logo"><img src="images/image_50.png" alt="Treefort forums"  /></a>
+		<h1 style="text-align:left; margin-left:15%; font-size:4em; color:white";>Treefort Creators</h1>		
+		<div style="clear:both"></div>
+		<nav class="mainmenu">
+			<a href="https://www.treefortforums.net/">TREEFORT</a>
+			<a href="https://www.treefortforums.net/blogs">BLOGS</a>
+			<a href="https://www.treefortforums.net/forum">PAGES</a>
+			<a href="https://www.treefortforums.net/support-us" class="text-nowrap">SUPPORT TREEFORT</a>
+		</nav>
 	</header>
 	<form>
 		<div class="form-group row">
@@ -41,7 +49,7 @@
 		<div class="form-group row">
 			<label for="post" class="col-md-3 col-form-label">Post Number</label>
 			<div class="col-md-9">
-				<input type="number" class="form-control" id="post" placeholder="Post Number">
+				<input type="number" class="form-control" id="post" placeholder="Post Number" min="1" max="10000">
 			</div>
 		</div>
 		<div class="form-group row">
@@ -59,7 +67,7 @@
 				</select>
 			</div>
 			<div class="col-md-6">
-				<input type="number" class="form-control" id="amount" placeholder="Donation Amount">
+				<input type="number" class="form-control" id="amount" placeholder="Donation Amount" min="0" max="1000" step="0.01">
 			</div>
 		</div>
 		<input class="btn btn-success btn-lg col-md-3 offset-md-3" type="submit" value="Submit">
