--- a/nav.html
+++ b/nav.html
@@ -29,8 +29,8 @@
 	</header>
 	<div class="main">
 		<p>Welcome to Treefort Creators!</p><p>Click the Donate button to make a donation, or the Creators button to register as a Treefort Creator.</p>
-		<a class="btn btn-success btn-lg btn-block" href="index.html">Donate</a>
-		<a class="btn btn-warning btn-lg btn-block" href="creators.html">Creators</a>
+		<a class="btn btn-success btn-lg col-md-5" href="index.html">Donate</a><br />
+		<a class="btn btn-warning btn-lg col-md-5" href="creators.html">Creators</a>
 	</div>
 	<footer class="gfoot">
 		<a href="https://www.treefortforums.net/help">HELP</a>
