--- a/creators.html
+++ b/creators.html
@@ -11,6 +11,8 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+<!-- validation JS -->
+<script type="text/Javascript" src="auth.js"></script>	
 	
 	<title>Treefort Creators</title>
 </head>
@@ -27,22 +29,24 @@
 			<a href="https://www.treefortforums.net/support-us" class="text-nowrap">SUPPORT TREEFORT</a>
 		</nav>
 	</header>
-	<form name="register" onsubmit="something();">
-		<div class="form-group row">
+	<form name="register">
+		<div class="form-group row" style="margin-top:20px; margin-bottom:40px";>
 			<label for="userName" class="col-md-3 col-form-label">Your Treefort Username</label>
 			<div class="col-md-9">
 				<input type="text" name="userName" class="form-control" id="userName" placeholder="Your Username" required />
 			</div>
 		</div>
-		<div class="form-group row">
+		<div class="form-group row" style="margin-bottom:50px";>
 			<label for="email" class="col-md-3 col-form-label">Your Email Address</label>
 			<div class="col-md-9">
 				<input type="email" name="email" class="form-control" id="email" placeholder="Your Email" required />
 			</div>
 		</div>
-		<input class="btn btn-success btn-lg col-md-3 offset-md-3" type="submit" value="Submit">
+		<input class="btn btn-success btn-lg col-md-3 offset-md-3" type="submit" value="Submit" style="margin-bottom:20px";>
 	</form>
 	<footer class="gfoot">
+	<!-- First line is link back to nav page, if you decide to add it to donation page -->
+		<a href="nav.html" class="text-nowrap col-sm-12 col-md-2" style="float:left; font-size:.9em; margin-right:20%; margin-bottom:10px; border:none";>Back to Treefort Creators Home</a>
 		<a href="https://www.treefortforums.net/help">HELP</a>
 		<a href="https://www.treefortforums.net/contact-us">CONTACT US</a>
 		<a href="https://www.treefortforums.net/TermsOfUse" class="text-nowrap">TERMS OF USE</a>
