--- a/creators.html
+++ b/creators.html
@@ -30,7 +30,9 @@
 		</nav>
 	</header>
 	<form name="register">
-		<div class="form-group row" style="margin-top:20px; margin-bottom:40px";>
+	<p>Register below to be a Treefort Content Creator<br />
+	<a href="index.html" id="donor">Click here to make a donation to your favorite Treefort Creator</a></p>
+		<div class="form-group row" style="margin-top:40px; margin-bottom:40px";>
 			<label for="userName" class="col-md-3 col-form-label">Your Treefort Username</label>
 			<div class="col-md-9">
 				<input type="text" name="userName" class="form-control" id="userName" placeholder="Your Username" required />
